--- a/src/Sidebar/Weather/Weather.module.css
+++ b/src/Sidebar/Weather/Weather.module.css
@@ -5,7 +5,7 @@
     color: #b18030;
     border-radius: 10px 10px 0 0;
     font-size: 1.2rem;
-    font-weight: bold;
+    font-weight: 500;
     text-shadow: 2px 2px 3px #000000;
 }
 
@@ -15,8 +15,18 @@
     color: #260000;
 }
 
+.container {
+    font-family: 'AGoblinAppears';
+    font-size: .65rem;
+}
+
+.time {
+    font-size: .70rem;
+}
+
 .temp {
-    font-size: 1rem;
+    padding: 8px;
+    font-size: .75rem;
     font-weight: bold;
     text-shadow: 1px 1px black;
 }
@@ -62,15 +72,5 @@
 }
 
 .interpret, .time {
-    font-size: 1rem;
     font-weight: bold;
-}
-
-@media screen and (max-width: 768px) {
-    .header {
-        font-size: 1.2rem;
-    }
-    .temp {
-        font-size: 10pt;
-    }
 }
