--- a/src/components/StaticPages/2D3DArt/2D3DArt.module.css
+++ b/src/components/StaticPages/2D3DArt/2D3DArt.module.css
@@ -1,5 +1,5 @@
-@media (max-width: 800px) and (min-width: 300px) {
+/* @media (max-width: 800px) and (min-width: 300px) {
     .Image {
         width: 88vw;
     }
-}
+} */
