--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
+  --scrollbar-width: calc(100vw - 100%);
 }
 
 code {
